	all : evaluate conditional expressions in @:require
	all : allowed (expr : type) syntax (ECheckType)
	all : support abstract types in haxe.rtti.XmlParser
	all : allowed extending generic type parameter
	all : added EnumValue.match
	all : added Std.instance
	all : allow recursive type parameter constraints
	all : allow @:fakeEnum on abstracts
	all : allow Class.new
	js : added -D js-flatten
	macro : allowed $v{(c:Float|Int|String)}
	macro : resolve error line number in external files

2013-05-25: 3.0.0
	all : added haxe.ds.BalancedTree
	all : added haxe.ds.EnumValueMap
	all : allow enum constructors as keys to Map
	all : haxe.ds.ObjectMap is now correctly constrained on all targets
	all : preliminary support of -D display-mode=usage|position|metadata
	all : improved pattern matcher error messages
	all : allow inline constructors
	all : allow abstract member macros (not for @:op, @:arrayAccess, @:from, @:to)
	all : allow abstract type parameter variance
	all : do not generate hidden null on if without else
	macro : made abstract structure available

2013-05-08: 3.0.0-RC2
	all : improved abstract support
	all : renamed HAXE_LIBRARY_PATH to HAXE_STD_PATH
	all : added inlinable constructors
	all : renamed haxe.ds.FastCell to GenericCell
	all : fixed >= operator in #if conditionals
	all : improved completion support for Unknown results
	all : allowed [] access for Map
	all : added haxe.ds.WeakMap (not yet supported on all platforms)
	all : all trace parameters are now printed by default
	all : added --help-metas
	all : improved completion
	all : improved pattern matching variable capture and GADT support
	js : cached $bind results (unique closure creation per instance)
	js : removed --js-modern (now as default)
	cpp : added socket.setFastSend
	flash : update player 11.7 api
	flash : improved @:font, @:sound and @:bitmap support
	neko/java/cs : improved Array performances when growing with []
	java : added -java-lib support