@@ -11,6 +11,7 @@
 	all : allow recursive type parameter constraints
 	all : allow @:fakeEnum on abstracts
 	all : allow Class.new
+	all : inlining a parameter which has side effects will not remove it even if not used
 	js : added -D js-flatten
 	macro : allowed $v{(c:Float|Int|String)}
 	macro : resolve error line number in external files
